<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.assignment.mei.assignment_6.eightpuzzle_direct">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Tile_puzzle"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:onClick="onCLick"
        android:text="@string/begin_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/puzzle_but_7"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/puzzle_but_6"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/puzzle_but_5"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/puzzle_but_4"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_row="1"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/puzzle_but_8"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/puzzle_but_1"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/puzzle_but_2"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/puzzle_but_3"
            android:textSize="30sp" />

    </GridLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/eight_puzzle_direct"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
