<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.assignment.mei.assignment_6.Eightpuzzle_game">


    <Button
        android:id="@+id/buttonreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="48dp"
        android:onClick="onClickReset"
        android:text="@string/reset_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="161dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374">

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:onClick="onClick3"
            android:text="@string/puzzle_but_3"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteY="56dp" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:onClick="onClick4"
            android:text="@string/puzzle_but_4"
            android:textSize="25dp"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="72dp" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:onClick="onClick1"
            android:text="@string/puzzle_but_1"
            android:textSize="25dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:onClick="onClick2"
            android:text="@string/puzzle_but_2"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:onClick="onClick5"
            android:text="@string/puzzle_but_5"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:onClick="onClick7"
            android:text="@string/puzzle_but_7"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:onClick="onClick6"
            android:text="@string/puzzle_but_6"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button10"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:onClick="onClick8"
            android:text="@string/puzzle_but_8"
            android:textSize="25sp" />

    </GridLayout>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/header_puzzle"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="157dp"
        android:layout_height="121dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:layout_marginStart="48dp"
        android:onClick="onClickSolve"
        android:text="@string/solver"
        app:layout_constraintBottom_toTopOf="@+id/buttonreset"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickNext"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@+id/buttonreset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
